<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@drawable/login_rounded_corner_shape"
    android:elevation="@dimen/design_appbar_elevation"
    app:behavior_hideable="false"
    app:behavior_peekHeight="70dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/login_create_new_account_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:onClick="loginSignupBtnClicked"
        android:padding="16dp"
        android:text="@string/create_new_account" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="85"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/asking_price_post_edit_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/asking_price_post_Edit_Text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_full_name"
                    android:inputType="text"
                    android:maxLength="29"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/size_of_flat_post_edit_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/asking_price_post_edit_text_input_layout"
                android:textColorHint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/size_of_flat_post_edit_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:maxLength="29"
                    android:paddingBottom="16dp"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/no_of_bed_post_edit_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/size_of_flat_post_edit_text_input_layout"
                android:textColorHint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_Email_EditText_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/size_of_flat_post_edit_text_id"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="63"
                    android:paddingBottom="16dp"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/no_of_bath_post_edit_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/no_of_bed_post_edit_text_input_layout"
                android:textColorHint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_Password_EditText_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signup_Email_EditText_id"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:paddingBottom="16dp"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/floor_post_edit_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/no_of_bath_post_edit_text_input_layout"
                android:textColorHint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_Password_ReEnter_EditText_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signup_Password_EditText_id"
                    android:hint="@string/hint_re_enter_password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:paddingBottom="16dp"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15">

            <ProgressBar
                android:id="@+id/sign_up_progress_bar_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/create_account_Btn_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="loginSignupBtnClicked"
                android:text="@string/create_account" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
