<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.sample.bottomsheetsample.MainActivity">

    <!--<android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.kdotj.bottomsheetsample.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        </RelativeLayout>

        <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_edit_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/usernameEditText_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_holder_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_edit_text_input_layout"
                android:textColorHint="@color/colorAccent"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordEditText_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>


            <ProgressBar
                android:id="@+id/login_progress_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_holder_id" />

            <Button
                android:id="@+id/loginBtn_id"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/password_holder_id"
                android:onClick="btnClicked"
                android:text="@string/login" />

        </RelativeLayout>

    </LinearLayout>


    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email" />-->

    <!-- Notice a few things:
        app:layout_behavior="@string/bottom_sheet_behavior" required to act as bottom sheet
        app:behavior_peekHeight="244dp" this is the collapsed state height
        app:behavior_hideable="true" lets you swipe to dismiss the sheet
        android:elevation="@dimen/design_appbar_elevation" puts the sheet over the action bar
    -->
    <FrameLayout
        android:id="@+id/fl_bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#777"
        android:elevation="@dimen/design_appbar_elevation"
        app:behavior_hideable="false"
        app:behavior_peekHeight="70dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:padding="16dp"
            android:text="Hello, Bottom Sheet!" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="85"
                android:gravity="center_vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username_signup_edit_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/Signup_Username_EditText_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_full_name"
                        android:inputType="text"
                        android:maxLength="29"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_signup_edit_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username_signup_edit_text_input_layout"
                    android:textColorHint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/Signup_Phone_EditText_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone_number"
                        android:inputType="phone"
                        android:maxLength="29"
                        android:paddingBottom="16dp"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_signup_edit_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_signup_edit_text_input_layout"
                    android:textColorHint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/Signup_Email_EditText_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Signup_Phone_EditText_id"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="63"
                        android:paddingBottom="16dp"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_signup_edit_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_signup_edit_text_input_layout"
                    android:textColorHint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/Signup_Password_EditText_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Signup_Email_EditText_id"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:paddingBottom="16dp"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/re_enter_password_signup_edit_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_signup_edit_text_input_layout"
                    android:textColorHint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/Signup_Password_ReEnter_EditText_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Signup_Password_EditText_id"
                        android:hint="@string/hint_re_enter_password"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:paddingBottom="16dp"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15">

                <ProgressBar
                    android:id="@+id/sign_up_progress_bar_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/nextToCategoryBtn_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account" />

            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>